Fix bug when collapsing list on slides page

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -352,12 +352,12 @@ header .entry-meta {
 		cursor: pointer;
 	}
 
-	&.active {
-		.summary i {
+	& .summary.active {
+		i {
 			transform: rotate(90deg);
 		}
 	
-		ul {
+		& + ul {
 			opacity: 1;
 			max-height: 1000px;
 		}
